--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
 <link rel="stylesheet" type="text/css" href="css/c-contact-form.css">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,700,800' rel='stylesheet' type='text/css'>
 
+<script src="https://use.fontawesome.com/f35d74575d.js"></script>
+
 </head>
 
 <body>
@@ -121,30 +123,21 @@
 
   <footer>
     <div class="row">
-      <div class="col-md-3">
-
+      <div class="col-xs-12 sec-text-small">
+        <a class="footer-text" href="#">Support Us</a> |
+        <a class="footer-text" href="https://github.com/codedbykids/presskit">Press</a> |
+        <a class="footer-text" href="#">Careers</a> |
+        <a class="footer-text" href="#">Blog</a> |
+        <a class="footer-text" href="#">Facts</a>
       </div>
-      <div class="col-md-2 sec-text-small-r">
-        <p>
-          Press
-        </p>
-      </div>
-      <div class="col-md-2 sec-text-small">
-        <p>
-          Careers
-        </p>
-      </div>
-      <div class="col-md-2 sec-text-small-l">
-        <p>
-          Blog
-        </p>
-      </div>
-      <div class="col-md-3">
-
-      </div>
-    </div>
     <div class="row">
-
+      <div class="col-md-12" id="social">
+        <a href="https://www.facebook.com/codedbykids/"><i class="fa fa-facebook-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/codedbykids"><i class="fa fa-twitter-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/codedbykids/"><i class="fa fa-instagram fa-3x img-light social-icons" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/company/coded-by-kids?trk=biz-companies-cym"><i class="fa fa-linkedin-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
+        <a href="https://github.com/codedbykids-curriculum"><i class="fa fa-github-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
+      </div>
     </div>
     <div class="row">
       <div class="col-md-12 sec-text-small">
