--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 title">
-            <h3 class="sec-title-2-dark">Why Volunteer With Us</h3>
+            <i class="fa fa-child fa-4x img-dark" aria-hidden="true"></i><h3 class="sec-title-2-dark">Why Volunteer With Us</h3>
           </div>
         </div>
         <div class="row">
@@ -249,7 +249,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 title">
-            <h3 class="sec-title-2-dark">Becoming A Coded by Kids Volunteer</h3>
+            <i class="fa fa-cogs fa-4x img-dark" aria-hidden="true"></i><h3 class="sec-title-2-dark">Becoming A Coded by Kids Volunteer</h3>
           </div>
         </div>
         <div class="row">
@@ -308,40 +308,21 @@
 
     <footer>
       <div class="row">
-        <div class="col-xs-1">
-
+        <div class="col-xs-12 sec-text-small">
+          <a class="footer-text" href="#">Support Us</a> |
+          <a class="footer-text" href="https://github.com/codedbykids/presskit">Press</a> |
+          <a class="footer-text" href="#">Careers</a> |
+          <a class="footer-text" href="#">Blog</a> |
+          <a class="footer-text" href="#">Facts</a>
         </div>
-        <div class="col-xs-2 sec-text-small">
-          <p>
-            support
-          </p>
-        </div>
-        <div class="col-xs-2 sec-text-small">
-          <p>
-            Press
-          </p>
-        </div>
-        <div class="col-xs-2 sec-text-small">
-          <p>
-            Careers
-          </p>
-        </div>
-        <div class="col-xs-2 sec-text-small">
-          <p>
-            Blog
-          </p>
-        </div>
-        <div class="col-xs-2 sec-text-small">
-          <p>
-            facts
-          </p>
-        </div>
-        <div class="col-xs-1">
-
-        </div>
-      </div>
       <div class="row">
-
+        <div class="col-md-12" id="social">
+          <a href="https://www.facebook.com/codedbykids/"><i class="fa fa-facebook-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/codedbykids"><i class="fa fa-twitter-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/codedbykids/"><i class="fa fa-instagram fa-3x img-light social-icons" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/company/coded-by-kids?trk=biz-companies-cym"><i class="fa fa-linkedin-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
+          <a href="https://github.com/codedbykids-curriculum"><i class="fa fa-github-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-12 sec-text-small">
