adjusted image and background scrolling

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="row" id="main-menu">
           <div class="col-md-4 main-img">
-            <a class="selection" data-slide="2" href="#slide2" ><img class="main-menu-imgs" src="img/parents-shadow.png" data-stellar-ratio=".25" data-stellar-vertical-offset="0" alt="Coded by Kids Information for Parents" /></a>
+            <a class="selection" data-slide="2" href="#slide2" ><img class="main-menu-imgs" src="img/parents-shadow.png" data-stellar-ratio="0" data-stellar-vertical-offset="0" alt="Coded by Kids Information for Parents" /></a>
             <h2>For Parents</h2>
           </div>
           <div class="col-md-4 main-img">
@@ -68,7 +68,7 @@
 
   	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
       <div class="" id="sec-5">
-        <div class="top-border" id="parents">
+        <div class="top-border" id="parents" data-stellar-ratio=".55">
 
         </div>
         <div class="row" id="">
