--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       </div>
     </div><!--End Slide 1-->
 
-  	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
+  	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0">
       <div class="" id="sec-5">
-        <div class="top-border" id="parents" data-stellar-ratio=".55">
+        <div class="top-border" id="parents" data-stellar-ratio="0">
 
         </div>
         <div class="row" id="">
