removed ratio from parents section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0">
       <div class="" id="sec-5">
-        <div class="top-border" id="parents" data-stellar-ratio="0">
+        <div class="top-border" id="parents">
 
         </div>
         <div class="row" id="">
