--- a/index.html
+++ b/index.html
@@ -147,24 +147,48 @@
             <i class="fa fa-cog fa-4x img-light" aria-hidden="true"></i><h3 class="sec-title-2">The Registration Process</h3>
           </div>
         </div>
+        <br>
         <div class="row">
-          <div class="col-md-6 reg-sec">
-            <img class="reg-img" src="img/reg-process-01.png" alt="" />
+          <div class="col-sm-6 sec-text-general-l">
+            <h3 class="number-large">01.</h3>
+            <p class="par-title"><span><i class="fa fa-keyboard-o fa-1x img-xsmall" aria-hidden="true"></i></span>
+              Complete Registration
+            </p>
+            <p>
+              Please complete and submit our online registration form. This must be completed before your
+              child starts and Coded by Kids program.
+            </p>
+            <br>
+            <h3 class="number-large">02.</h3>
+            <p class="par-title"><span><i class="fa fa-book fa-1x img-xsmall" aria-hidden="true"></i></span>
+              Download Handbook
+            </p>
+            <p>
+              After completing the online registration please download the student and parent handbook. The handbook
+              will have all of the information you and your child will need for class.
+            </p>
           </div>
-          <div class="col-md-6 reg-sec">
-            <img class="reg-img" src="img/reg-process-02.png" alt="" />
+          <div class="col-sm-6 sec-text-general-l">
+            <h3 class="number-large">03.</h3>
+            <p class="par-title"><span><i class="fa fa-envelope fa-1x img-xsmall" aria-hidden="true"></i></span>
+              Receive Confirmation
+            </p>
+            <p>
+              Within 48 to 72 hours you will receive a registration confirmation. Your registration confirmation
+              will let you know if there is an opening in class. If there isn't an opening you will be placed on
+              the waiting list.
+            </p>
+            <br>
+            <h3 class="number-large">04.</h3>
+            <p class="par-title"><span><i class="fa fa-calendar fa-1x img-xsmall" aria-hidden="true"></i></span>
+              Confirm Start Date
+            </p>
+            <p>
+              Once you receive an email confirming an opening in class you will be required to confirm your child's
+              start date.
+            </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6 reg-sec">
-            <img class="reg-img" src="img/reg-process-03.png" alt="" />
-          </div>
-          <div class="col-md-6 reg-sec">
-            <img class="reg-img" src="img/reg-process-04.png" alt="" />
-          </div>
-        </div>
-        <br>
-        <br>
         <div class="row">
           <div class="col-md-12 title">
             <i class="fa fa-university fa-4x img-light" aria-hidden="true"></i><h3 class="sec-title-2">Other Programs</h3>
