added contact form and sign in links

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
               <li><a href="about.html#about-us">About</a></li>
               <li><a href="partner.html#partner">Partner</a></li>
               <li><a href="programs.html#programs">Programs</a></li>
-              <li><a href="index.html#contact">Contact</a></li>
-              <li><a href="">Sign In</a></li>
+              <li><a href="https://codedbykids.herokuapp.com/contact">Contact</a></li>
+              <li><a href="https://codedbykids.herokuapp.com/signIn">Sign In</a></li>
             </ul>
           </div><!--/.nav-collapse -->
       </nav>
