--- a/fellowship.html
+++ b/fellowship.html
@@ -32,11 +32,11 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul id="nav" class="nav navbar-nav navbar-right">
-              <li><a href="http://www.codedbykids.com/about.html#about-us">About</a></li>
-              <li><a href="http://www.codedbykids.com/partner.html#partner">Partner</a></li>
-              <li><a href="http://www.codedbykids.com/programs.html#programs">Programs</a></li>
-              <li><a href="index.html#contact">Contact</a></li>
-              <li><a href="">Sign In</a></li>
+              <li><a href="about.html#about-us">About</a></li>
+              <li><a href="partner.html#partner">Partner</a></li>
+              <li><a href="programs.html#programs">Programs</a></li>
+              <li><a href="https://codedbykids.herokuapp.com/contact">Contact</a></li>
+              <li><a href="https://codedbykids.herokuapp.com/signIn">Sign In</a></li>
             </ul>
           </div><!--/.nav-collapse -->
       </nav>
