--- a/partner.html
+++ b/partner.html
@@ -34,8 +34,8 @@
             <li><a href="about.html#about-us">About</a></li>
             <li><a href="partner.html#partner">Partner</a></li>
             <li><a href="programs.html#programs">Programs</a></li>
-            <li><a href="/#contact">Contact</a></li>
-            <li><a href="{{pathFor 'signIn'}}">Sign In</a></li>
+            <li><a href="https://codedbykids.herokuapp.com/contact">Contact</a></li>
+            <li><a href="https://codedbykids.herokuapp.com/signIn">Sign In</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
