fixed section numbering and added shop url

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
     </div>
   </div>
 
-  <div class="" id="sec-2">
+  <div class="" id="sec-5">
     <div class="top-border" id="about-us">
 
     </div>
@@ -128,7 +128,8 @@
         <a class="footer-text" href="https://github.com/codedbykids/presskit">Press</a> |
         <a class="footer-text" href="#">Careers</a> |
         <a class="footer-text" href="#">Blog</a> |
-        <a class="footer-text" href="#">Facts</a>
+        <a class="footer-text" href="#">Facts</a> |
+        <a class="footer-text" href="http://www.cafepress.com/thecodedbykidsmerchshop">Shop</a>
       </div>
     <div class="row">
       <div class="col-md-12" id="social">
