--- a/fellowship.html
+++ b/fellowship.html
@@ -28,7 +28,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="selection navbar-brand" id="logo" data-slide="1" href="http://www.codedbykids.com/"><img src="img/logo-v5.png" alt="Coded by Kids"></a>
+            <a class="navbar-brand" id="logo" href="index.html"><img src="img/logo-v5.png" /></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul id="nav" class="nav navbar-nav navbar-right">
@@ -65,7 +65,7 @@
     </div><!--End Slide 1-->
 
   	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
-      <div class="" id="sec-5">
+      <div class="" id="sec-2">
         <div class="top-border" id="parents">
 
         </div>
@@ -91,7 +91,7 @@
               students.
             </p>
             <br>
-            <p>This is a paid followship.</p>
+            <p>This is a paid fellowship.</p>
             <br>
             <p>Please <a href="https://docs.google.com/document/d/1dQ-oedE_X3bxXlxamkGwGmK-28wsqBf4lJJ1_J1IAf4/edit?usp=sharing">click here</a> for a full position description</p>
             <br>
@@ -154,137 +154,13 @@
           <div class="sec-text">
             <p>
               Please <a href="https://docs.google.com/document/d/1B8rvE3_RtMyKOhF1hsD9HVKfNQOmVbzVRVAgbcPkwHE/edit?usp=sharing">Click Here</a> to download the application questionnaire. Completed questionnaires
-              and a current resume should be sent to dmobley@codedbykids.com by July 7th, 2016. Interviews will take
+              and a current resume should be sent to info@codedbykids.com by July 7th, 2016. Interviews will take
               place the week of July 11th and accepted applicants will be notified on July 18th, 2016.
             </p>
           </div>
         </div>
       </div>
   	</div><!--End Slide 2-->
-
-  	<!--<div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
-      <div class="" id="sec-6">
-        <div class="top-border" id="volunteers">
-
-        </div>
-        <div class="row" id="">
-          <div class="col-md-12 title">
-            <h2 class="sec-title-dark">Info for Volunteers</h2>
-          </div>
-        </div>
-        <div class="main-border"></div>
-        <div class="row">
-          <div class="col-md-12 title">
-            <i class="fa fa-users fa-4x img-dark" aria-hidden="true"></i><h3 class="sec-title-2-dark">Current Coded by Kids Volunteer Roles</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="sec-text-dark">
-              <p>
-                <strong>Class Coordinators - </strong>Class Coordinators are a key part of the logistics glue that
-                holds our classes together. They support our instructors by onboarding new students, providing
-                parents with orientations, assisting students with setting up new projects, conducting digital
-                literacy assessments and answering questions from parents.
-              </p>
-              <br>
-              <p>
-                <strong>Volunteer Coordinators - </strong>Volunteer Coordinators are responsible for supporting our
-                growing team of volunteers through orientations, training sessions, and onboarding. They are master
-                organizers who enjoy public speaking as well as paying attention to the details.
-              </p>
-              <br>
-              <p>
-                <strong>Volunteer Instructors - </strong>Volunteer Instructors provide students with technology
-                education and mentorship. Our Volunteer Instructors are tech superheros who may find themselves
-                teaching a 9 year old javascript in one class and giving a 17 year old guidance on pursuing a career
-                as a developer in the next. The technical concepts that Volunteer Instructors teach include HTML,
-                CSS, JavaScript, wireframing and version control. We are currently looking for instructors that can
-                teach coding and/or design.
-              </p>
-              <br>
-              <p>
-                <strong>Event Ambassadors - </strong>Event Ambassadors are the people who tell our story to the
-                outside world and help bring in new members to our community. The ideal Event Ambassadors are people
-                who enjoy going to events and networking. They attend events throughout the City on our behalf to help
-                spread our story and increase support.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 title">
-            <h3 class="sec-title-2-dark">Why Volunteer With Us</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="sec-text-dark">
-            <p>
-              Our dedicated team of volunteers is key to our success and the driving force behind the impact
-              that we have on Philadelphia students. Your commitment directly affects the lives of Philadelphia
-              students by giving them access tech education programs and mentorship.
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 title">
-            <h3 class="sec-title-2-dark">Becoming A Coded by Kids Volunteer</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="sec-text-dark">
-            <p>
-              To become a Coded by Kids volunteer please complete the volunteer application form. After completing
-              the volunteer application form you will receive an email from the Coded by Kids Volunteer Coordination
-              team to schedule a class visit. The class visit gives you the opportunity to learn more about what we
-              do and allows our staff to learn more about you.
-            </p>
-            <br>
-            <p>
-              After your class visit, if accepted as a Coded by Kids volunteer, you will be scheduled for a volunteer
-              orientation (held on the first Saturday of every month). During your volunteer orientation you will be
-              provided with all necessary paperwork and will be provided with assistance in completing the required
-              background checks.
-            </p>
-          </div>
-        </div>
-      </div>
-  	</div><!--End Slide 3-->
-
-  	<!--<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0">
-      <div class="" id="sec-7">
-        <div class="top-border" id="educators">
-
-        </div>
-        <div class="row" id="">
-          <div class="col-md-12 title">
-            <h2 class="sec-title">Info for Educators</h2>
-          </div>
-        </div>
-        <div class="main-border"></div>
-        <div class="row">
-          <div class="col-md-12 title">
-            <h3 class="sec-title-2">How We Can Help Educators</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="sec-text">
-            <p>
-              Are you interested in running a coding program at your school? Coded by Kids can help you to either
-              design a program that is run by your staff or we can implement a coding program at your school that
-              is run by our staff. Please contact us if you would like to learn more about either of these options.
-            </p>
-            <br>
-            <p>
-              Are you interested in learning more about coding? We provide training programs designed to help
-              educators understand coding and how to implement it in the classroom. Please contact us to learn more
-              about one of our coding programs for educators.
-            </p>
-          </div>
-        </div>
-        <div id="reg-btn" class="btn btn-default">REGISTER</div>
-      </div>
-  	</div><!--End Slide 4-->
 
     <footer>
       <div class="row">
@@ -293,7 +169,8 @@
           <a class="footer-text" href="https://github.com/codedbykids/presskit">Press</a> |
           <a class="footer-text" href="#">Careers</a> |
           <a class="footer-text" href="#">Blog</a> |
-          <a class="footer-text" href="#">Facts</a>
+          <a class="footer-text" href="#">Facts</a> |
+          <a class="footer-text" href="http://www.cafepress.com/thecodedbykidsmerchshop">Shop</a>
         </div>
       <div class="row">
         <div class="col-md-12" id="social">
