--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div><!--End Slide 1-->
 
   	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0">
-      <div class="" id="sec-5">
+      <div class="" id="sec-2">
         <div class="top-border" id="parents">
 
         </div>
@@ -85,16 +85,15 @@
         <div class="row">
           <div class="sec-text">
             <p>
-              Our weekly classes focus on teaching students real world tech concepts that range from
-              programming and software engineering to user experience design. These project based
-              classes progressively take children from learning basic coding concepts to gaining a
-              solid foundation in advanced software development. During our classes students learn
-              concepts that include wireframing, information architecture, web development, Agile
-              project management and the LEAN methodology.
+              Our weekly classes focus on teaching students real world tech concepts like software
+              engineering, web development, and user experience design. Our project based
+              classes progressively take students from learning basic coding concepts to advanced
+              software development. During our classes students learn concepts that include wireframing,
+              information architecture, web development, Agile project management and the LEAN methodology.
             </p>
             <br>
             <p>
-              We accept students from 5 to 18 years old, at all skill levels.
+              We accept students of all skill levels between the ages of 5 to 18 years old.
             </p>
           </div>
         </div>
@@ -208,7 +207,7 @@
   	</div><!--End Slide 2-->
 
   	<div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
-      <div class="" id="sec-6">
+      <div class="" id="sec-3">
         <div class="top-border" id="volunteers">
 
         </div>
@@ -227,10 +226,10 @@
           <div class="col-md-12">
             <div class="sec-text-dark">
               <p>
-                <strong>Class Coordinators - </strong>Class Coordinators are a key part of the logistics glue that
-                holds our classes together. They support our instructors by onboarding new students, providing
-                parents with orientations, assisting students with setting up new projects, conducting digital
-                literacy assessments and answering questions from parents.
+                <strong>Class Coordinators - </strong>Class Coordinators are a key part of classroom management. They
+                support our instructors by assisting with several tasks, such as: onboarding new students, providing
+                parents with information, setting students up with new projects, and conducting digital literacy
+                assessments.
               </p>
               <br>
               <p>
@@ -240,17 +239,16 @@
               </p>
               <br>
               <p>
-                <strong>Volunteer Instructors - </strong>Volunteer Instructors provide students with technology
-                education and mentorship. Our Volunteer Instructors are tech superheros who may find themselves
-                teaching a 9 year old javascript in one class and giving a 17 year old guidance on pursuing a career
-                as a developer in the next. The technical concepts that Volunteer Instructors teach include HTML,
-                CSS, JavaScript, wireframing and version control. We are currently looking for instructors that can
-                teach coding and/or design.
+                <strong>Volunteer Instructors - </strong>Our Volunteer Instructors are tech superheros who may find
+                themselves teaching a 9 year old javascript in one class and giving a 17 year old guidance on pursuing
+                a career as a developer in the next. The technical concepts that Volunteer Instructors teach include
+                HTML, CSS, JavaScript, wireframing and version control. We are currently looking for instructors that
+                can teach coding and/or design.
               </p>
               <br>
               <p>
                 <strong>Event Ambassadors - </strong>Event Ambassadors are the people who tell our story to the
-                outside world and help bring in new members to our community. The ideal Event Ambassadors are people
+                outside world and help bring in new members to our community. Ideal Event Ambassadors are people
                 who enjoy going to events and networking. They attend events throughout the City on our behalf to help
                 spread our story and increase support.
               </p>
@@ -281,7 +279,7 @@
             <p>
               To become a Coded by Kids volunteer please complete the volunteer application form. After completing
               the volunteer application form you will receive an email from the Coded by Kids Volunteer Coordination
-              team to schedule a class visit. The class visit gives you the opportunity to learn more about what we
+              Team to schedule a class visit. The class visit gives you the opportunity to learn more about what we
               do and allows our staff to learn more about you.
             </p>
             <br>
@@ -297,7 +295,7 @@
   	</div><!--End Slide 3-->
 
   	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0">
-      <div class="" id="sec-7">
+      <div class="" id="sec-4">
         <div class="top-border" id="educators">
 
         </div>
@@ -316,14 +314,14 @@
           <div class="sec-text">
             <p>
               Are you interested in running a coding program at your school? Coded by Kids can help you to either
-              design a program that is run by your staff or we can implement a coding program at your school that
-              is run by our staff. Please contact us if you would like to learn more about either of these options.
+              design a program that is run by your staff or implement a coding program at your school run by our
+              highly-trained team of instructors. Please contact us to learn more about these options.
             </p>
             <br>
             <p>
-              Are you interested in learning more about coding? We provide training programs designed to help
-              educators understand coding and how to implement it in the classroom. Please contact us to learn more
-              about one of our coding programs for educators.
+              Perhaps, you’re just interested in learning more about coding. We provide training programs designed to
+              help educators understand coding and how to implement it in the classroom. Please contact us to learn
+              more about one of our coding programs for educators.
             </p>
           </div>
         </div>
@@ -337,7 +335,8 @@
           <a class="footer-text" href="https://github.com/codedbykids/presskit">Press</a> |
           <a class="footer-text" href="#">Careers</a> |
           <a class="footer-text" href="#">Blog</a> |
-          <a class="footer-text" href="#">Facts</a>
+          <a class="footer-text" href="#">Facts</a> |
+          <a class="footer-text" href="http://www.cafepress.com/thecodedbykidsmerchshop">Shop</a>
         </div>
       <div class="row">
         <div class="col-md-12" id="social">
