--- a/programs.html
+++ b/programs.html
@@ -62,7 +62,7 @@
     </div>
   </div>
 
-  <div class="" id="sec-4">
+  <div class="" id="sec-7">
     <div class="top-border" id="programs">
 
     </div>
@@ -127,7 +127,8 @@
         <a class="footer-text" href="https://github.com/codedbykids/presskit">Press</a> |
         <a class="footer-text" href="#">Careers</a> |
         <a class="footer-text" href="#">Blog</a> |
-        <a class="footer-text" href="#">Facts</a>
+        <a class="footer-text" href="#">Facts</a> |
+        <a class="footer-text" href="http://www.cafepress.com/thecodedbykidsmerchshop">Shop</a>
       </div>
     <div class="row">
       <div class="col-md-12" id="social">
