--- a/summer-camps-2016.html
+++ b/summer-camps-2016.html
@@ -83,8 +83,8 @@
         <div class="row">
           <div class="sec-text">
             <p>
-              Have a tech-enthused student between the ages of 10-14 that wants to learn more? Coded by Kids Summer
-              Session is a two-week, half day immersion program designed to teach the fundamentals of coding. Through
+              Have a tech-enthused student between the ages of 10-14 that wants to learn more? The Coded by Kids Summer
+              Coding Camp is a two-week, half day immersion program designed to teach the fundamentals of coding. Through
               project-based learning, students will gain a foundation in software engineering and web development that
               will allow them to design and create their own applications. The Summer Session will expose students to
               the wide variety of opportunities in the field of technology, and get them excited about future careers
@@ -147,14 +147,7 @@
         <div class="row">
           <div class="sec-text">
             <p>
-              $400 per student, per session
-            </p>
-            <br>
-            <p>
-              $50 for before OR aftercare
-            </p>
-            <p>
-              $100 for before AND aftercare
+              $100 for before AND/OR aftercare
             </p>
           </div>
         </div>
@@ -173,7 +166,7 @@
         <div class="row">
           <div class="sec-text">
             <p>
-              Please click the registration form below and submit the online registration form to register your
+              Please click the registration button below to register your
               child.
             </p>
             <br>
