--- a/programs.html
+++ b/programs.html
@@ -130,6 +130,7 @@
         <a class="footer-text" href="#">Facts</a> |
         <a class="footer-text" href="http://www.cafepress.com/thecodedbykidsmerchshop">Shop</a>
       </div>
+    </div>
     <div class="row">
       <div class="col-md-12" id="social">
         <a href="https://www.facebook.com/codedbykids/"><i class="fa fa-facebook-square fa-3x img-light social-icons" aria-hidden="true"></i></a>
@@ -142,7 +143,7 @@
     <div class="row">
       <div class="col-md-12 sec-text-small">
         <p>
-          &copy 2016 Coded by Kids.
+          &copy; 2016 Coded by Kids.
         </p>
       </div>
     </div>
