--- a/summer-camps-2016.html
+++ b/summer-camps-2016.html
@@ -28,7 +28,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="selection navbar-brand" id="logo" data-slide="1" href="#"><img src="img/logo-v5.png" alt="Coded by Kids"></a>
+            <a class="navbar-brand" id="logo" href="index.html"><img src="img/logo-v5.png" /></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul id="nav" class="nav navbar-nav navbar-right">
