added session cost

--- a/summer-camps-2016.html
+++ b/summer-camps-2016.html
@@ -146,6 +146,7 @@
         </div>
         <div class="row">
           <div class="sec-text">
+            <p>$400 per session</p>
             <p>
               $100 for before AND/OR aftercare
             </p>
