updated summer camp enrollment link and summer camp info

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
         <div class="row">
           <div class="sec-text">
             <p>
-              <strong class=".sent-title">Summer Camps</strong> - We do not have any up coming summer camps at this time. Please check back.
+              <strong class=".sent-title">Summer Camps</strong> - Please <a href="summer-camps-2016.html">click here</a> to view our upcoming summer camps.
             </p>
             <p>
-              <strong class=".sent-title">After School Programs</strong> - We do not have any up coming after school programs at this time. Please check back.
+              <strong class=".sent-title">After School Programs</strong> - We do not have any upcoming after school programs at this time. Please check back.
             </p>
           </div>
         </div>
