--- a/summer-camps-2016.html
+++ b/summer-camps-2016.html
@@ -170,7 +170,7 @@
               child.
             </p>
             <br>
-            <a href="https://codedbykids.herokuapp.com/contact"><div id="reg-btn" class="btn btn-default">REGISTER</div></a>
+            <a href="https://codedbykids.herokuapp.com/summer-camp-enrollment"><div id="reg-btn" class="btn btn-default">REGISTER</div></a>
           </div>
         </div>
   	</div><!--End Slide 2-->
