--- a/fellowship.html
+++ b/fellowship.html
@@ -184,7 +184,7 @@
       <div class="row">
         <div class="col-md-12 sec-text-small">
           <p>
-            &copy 2016 Coded by Kids.
+            &copy; 2016 Coded by Kids.
           </p>
         </div>
       </div>
