fixed links for main images

--- a/partner.html
+++ b/partner.html
@@ -52,11 +52,11 @@
           <h2>For Parents</h2>
         </div>
         <div class="col-md-4 main-img">
-          <a href="{{pathFor 'volunteers'}}"><img class="main-menu-imgs" src="img/volunteers-shadow.png" alt="Information for Volunteers" /></a>
+          <a href="index.html#volunteers"><img class="main-menu-imgs" src="img/volunteers-shadow.png" alt="Information for Volunteers" /></a>
           <h2>For Volunteers</h2>
         </div>
         <div class="col-md-4 main-img">
-          <a href="{{pathFor 'educators'}}"><img class="main-menu-imgs" src="img/educators-shadow.png" alt="Information for Educators" /></a>
+          <a href="index.html#educators"><img class="main-menu-imgs" src="img/educators-shadow.png" alt="Information for Educators" /></a>
           <h2>For Educators</h2>
         </div>
       </div>
