fixed links on about, index and programs pages

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               based on when there application was submitted.
             </p>
             <br>
-            <div id="reg-btn" class="btn btn-default">REGISTER</div>
+            <a href="https://codedbykids.herokuapp.com/contact"><div id="reg-btn" class="btn btn-default">REGISTER</div></a>
           </div>
         </div>
         <br>
