--- a/programs.html
+++ b/programs.html
@@ -52,11 +52,11 @@
         <h2>For Parents</h2>
       </div>
       <div class="col-md-4 main-img">
-        <a href="{{pathFor 'volunteers'}}"><img class="main-menu-imgs" src="img/volunteers-shadow.png" alt="Information for Volunteers" /></a>
+        <a href="index.html#volunteers"><img class="main-menu-imgs" src="img/volunteers-shadow.png" alt="Information for Volunteers" /></a>
         <h2>For Volunteers</h2>
       </div>
       <div class="col-md-4 main-img">
-        <a href="{{pathFor 'educators'}}"><img class="main-menu-imgs" src="img/educators-shadow.png" alt="Information for Educators" /></a>
+        <a href="index.html#educators"><img class="main-menu-imgs" src="img/educators-shadow.png" alt="Information for Educators" /></a>
         <h2>For Educators</h2>
       </div>
     </div>
@@ -115,6 +115,10 @@
       <div class="sec-text">
         <p>
           Coded by Kids runs summer camps that are designed to introduce children of all ages to coding concepts.
+        </p>
+        <br>
+        <p>
+          Please <a href="summer-camps-2016.html">click here</a> to view our upcoming summer camps.
         </p>
       </div>
     </div>
