added apply button to volunteer section

--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
               provided with all necessary paperwork and will be provided with assistance in completing the required
               background checks.
             </p>
+            <br>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflIly8HC-K_AzV13NBTP7IsbSP8XlMvQTkSsvdG1GjjyLhtA/viewform"><div id="reg-btn-dark" class="btn btn-default">APPLY</div></a>
           </div>
         </div>
       </div>
