--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </nav>
     </div>
 
-  	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
+    <div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
       <div class="" id="sec-1">
         <div class="row" id="main-heading">
           <div class="col-md-12" id="home">
@@ -66,7 +66,7 @@
       </div>
     </div><!--End Slide 1-->
 
-  	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0">
+    <div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0">
       <div class="" id="sec-2">
         <div class="top-border" id="parents">
 
@@ -137,7 +137,7 @@
               based on when there application was submitted.
             </p>
             <br>
-            <a href="https://codedbykids.herokuapp.com/contact"><div id="reg-btn" class="btn btn-default">REGISTER</div></a>
+            <a href="https://codedbykids.herokuapp.com/signIn"><div id="reg-btn" class="btn btn-default">REGISTER</div></a>
           </div>
         </div>
         <br>
@@ -147,24 +147,25 @@
           </div>
         </div>
         <br>
-        <div class="row">
+        <!--<div class="row">
           <div class="col-sm-6 sec-text-general-l">
             <h3 class="number-large">01.</h3>
             <p class="par-title"><span><i class="fa fa-keyboard-o fa-1x img-xsmall" aria-hidden="true"></i></span>
-              Complete Registration
+              Create an Account
             </p>
             <p>
-              Please complete and submit our online registration form. This must be completed before your
-              child starts and Coded by Kids program.
+              Register and create an account with Coded by Kids. With this account you'll be able to log in, edit your information and view your child's progress.
+            </p>
+            <p class="par-title">
+              Show steps <i class="glyphicon glyphicon-chevron-down"></i>
             </p>
             <br>
             <h3 class="number-large">02.</h3>
             <p class="par-title"><span><i class="fa fa-book fa-1x img-xsmall" aria-hidden="true"></i></span>
-              Download Handbook
+              Complete Registration
             </p>
             <p>
-              After completing the online registration please download the student and parent handbook. The handbook
-              will have all of the information you and your child will need for class.
+              Complete and submit our online registration forms for both you and your child. These must be complete before your child starts a Coded by Kids program.
             </p>
           </div>
           <div class="col-sm-6 sec-text-general-l">
@@ -187,6 +188,45 @@
               start date.
             </p>
           </div>
+        </div>-->
+        <div class="row">
+            <div class="col-sm-6 sec-text-general-l">
+              <h3 class="number-large">01.</h3>
+              <p class="par-title"><span><i class="fa fa-keyboard-o fa-1x img-xsmall" aria-hidden="true"></i></span>
+                Create an Account
+              </p>
+              <p>
+                Register and create an account with Coded by Kids by clicking the "Sign In" button in the upper right-hand corner, then selecting "Register". With this account you'll be able to log in, edit your information and view your child's progress.
+              </p>
+              <br>
+              <h3 class="number-large">02.</h3>
+              <p class="par-title"><span><i class="fa fa-book fa-1x img-xsmall" aria-hidden="true"></i></span>
+                Complete Registration
+              </p>
+              <p>
+                After creating your account, you will be redirected to our online registration forms. Complete both forms, there's one for both you and your child. These must be complete before your child starts a Coded by Kids program.
+              </p>
+            </div>
+            <div class="col-sm-6 sec-text-general-l">
+              <h3 class="number-large">03.</h3>
+              <p class="par-title"><span><i class="fa fa-envelope fa-1x img-xsmall" aria-hidden="true"></i></span>
+                Receive Confirmation
+              </p>
+              <p>
+                Within 48 to 72 hours you will receive a registration confirmation. Your registration confirmation
+                will let you know if there is an opening in class. If there isn't an opening you will be placed on
+                the waiting list.
+              </p>
+              <br>
+              <h3 class="number-large">04.</h3>
+              <p class="par-title"><span><i class="fa fa-calendar fa-1x img-xsmall" aria-hidden="true"></i></span>
+                Confirm Start Date
+              </p>
+              <p>
+                Once you receive an email confirming an opening in class you will be required to confirm your child's
+                start date.
+              </p>
+            </div>
         </div>
         <div class="row">
           <div class="col-md-12 title">
@@ -204,9 +244,9 @@
           </div>
         </div>
       </div>
-  	</div><!--End Slide 2-->
+    </div><!--End Slide 2-->
 
-  	<div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
+    <div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
       <div class="" id="sec-3">
         <div class="top-border" id="volunteers">
 
@@ -294,9 +334,9 @@
           </div>
         </div>
       </div>
-  	</div><!--End Slide 3-->
+    </div><!--End Slide 3-->
 
-  	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0">
+    <div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0">
       <div class="" id="sec-4">
         <div class="top-border" id="educators">
 
@@ -328,7 +368,7 @@
           </div>
         </div>
       </div>
-  	</div><!--End Slide 4-->
+    </div><!--End Slide 4-->
 
     <footer>
       <div class="row">
