fixed regisrtation paragraph

--- a/index.html
+++ b/index.html
@@ -147,48 +147,7 @@
           </div>
         </div>
         <br>
-        <!--<div class="row">
-          <div class="col-sm-6 sec-text-general-l">
-            <h3 class="number-large">01.</h3>
-            <p class="par-title"><span><i class="fa fa-keyboard-o fa-1x img-xsmall" aria-hidden="true"></i></span>
-              Create an Account
-            </p>
-            <p>
-              Register and create an account with Coded by Kids. With this account you'll be able to log in, edit your information and view your child's progress.
-            </p>
-            <p class="par-title">
-              Show steps <i class="glyphicon glyphicon-chevron-down"></i>
-            </p>
-            <br>
-            <h3 class="number-large">02.</h3>
-            <p class="par-title"><span><i class="fa fa-book fa-1x img-xsmall" aria-hidden="true"></i></span>
-              Complete Registration
-            </p>
-            <p>
-              Complete and submit our online registration forms for both you and your child. These must be complete before your child starts a Coded by Kids program.
-            </p>
-          </div>
-          <div class="col-sm-6 sec-text-general-l">
-            <h3 class="number-large">03.</h3>
-            <p class="par-title"><span><i class="fa fa-envelope fa-1x img-xsmall" aria-hidden="true"></i></span>
-              Receive Confirmation
-            </p>
-            <p>
-              Within 48 to 72 hours you will receive a registration confirmation. Your registration confirmation
-              will let you know if there is an opening in class. If there isn't an opening you will be placed on
-              the waiting list.
-            </p>
-            <br>
-            <h3 class="number-large">04.</h3>
-            <p class="par-title"><span><i class="fa fa-calendar fa-1x img-xsmall" aria-hidden="true"></i></span>
-              Confirm Start Date
-            </p>
-            <p>
-              Once you receive an email confirming an opening in class you will be required to confirm your child's
-              start date.
-            </p>
-          </div>
-        </div>-->
+  
         <div class="row">
             <div class="col-sm-6 sec-text-general-l">
               <h3 class="number-large">01.</h3>
@@ -196,7 +155,7 @@
                 Create an Account
               </p>
               <p>
-                Register and create an account with Coded by Kids by clicking the "Sign In" button in the upper right-hand corner, then selecting "Register". With this account you'll be able to log in, edit your information and view your child's progress.
+                Create an account with Coded by Kids by clicking the "Register" button above, and then selecting the "Register" link. With this account you'll be able to log in, edit your information and view your child's progress.
               </p>
               <br>
               <h3 class="number-large">02.</h3>
